# anim8

./: Cargo.toml  README.md  justfile
src/: animation.rs  curve.rs  lib.rs  phase.rs  spline.rs  transition.rs  utils.rs
