[package]
name = "anim8"
version = "1.4.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2024"
description = "Animation toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anim8"
repository = "https://github.com/PsichiX/anim8"
documentation = "https://docs.rs/anim8"
readme = "README.md"

[features]
scalar64 = []

[dependencies]
serde = { version = "1", features = ["derive"] }
